--- a/main.html
+++ b/main.html
@@ -5,12 +5,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>night hiking</title>
-    <link rel="stylesheet" href="main.css">
+    <title>Death stalker</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
+    <div class="container">
+        <div class="menu">
+            <ul>
+                <li class="logo"><img src=" diamond.png "></li>
+                <li class="active">Home</li>
+                <li>Services</li>
+                <li>Product</li>
+                <li>
+                    <a href="#" class="signup-btn"> Sign Up</a>
+                </li>
+            </ul>
+        </div>
+    </div>
 </body>
 
 </html>
