--- a/main.html
+++ b/main.html
@@ -20,11 +20,21 @@
                 <li>Services</li>
                 <li>Product</li>
                 <li>
-                    <a href="#" class="signup-btn"> Sign Up</a>
+                    <a href="#" class="signup-btn"><span>Sign Up</span></a>
                 </li>
             </ul>
         </div>
-    </div>
+        <div class="banner">
+            <div class="app-text">
+                <h1>Our basic thesis for bitcoin
+                    <br> is that it is better than gold</h1>
+                <p>
+                    Contrary topoular belie,Lorem ipsum is not simply a random <br>text.It has roots in a piece classical latin literature from 45Bc<br> mking it over 2000 years old
+                </p>
+            </div>
+            <div class="app-picture">
+                <img src="back0.png"></div>
+        </div>
 </body>
 
 </html>
