--- a/main.html
+++ b/main.html
@@ -31,6 +31,11 @@
                 <p>
                     Contrary topoular belie,Lorem ipsum is not simply a random <br>text.It has roots in a piece classical latin literature from 45Bc<br> mking it over 2000 years old
                 </p>
+                <div class="play-btn">
+                    <div class="play-btn-inner">
+                        <i class="fa fa-play"></i>
+                    </div>
+                </div>
             </div>
             <div class="app-picture">
                 <img src="back0.png"></div>
