--- a/main.html
+++ b/main.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -33,13 +34,36 @@
                 </p>
                 <div class="play-btn">
                     <div class="play-btn-inner">
-                        <i class="fa fa-play"></i>
-                    </div>
+                        <img src="play.svg"> </div>
                 </div>
+                <small><b>Learn more</b></small>
             </div>
             <div class="app-picture">
-                <img src="back0.png"></div>
+                <img src="back0.png">
+            </div>
         </div>
+        <div class="quick-links">
+
+            <ul>
+                <li class="Share">
+                    <p>Share To</p>
+
+                </li>
+                <li class="Audio">
+                    <p>Recent</p>
+
+                </li>
+                <li class="Analytics">
+                    <p>Analytics</p>
+
+                </li>
+                <li class="Wallet">
+                    <p>Wallet</p>
+
+                </li>
+            </ul>
+        </div>
+
 </body>
 
 </html>
