--- a/main.html
+++ b/main.html
@@ -43,26 +43,29 @@
             </div>
         </div>
         <div class="quick-links">
-
+            ````````````
             <ul>
-                <li class="Share">
+                <li class="fa fa-Share">
                     <p>Share To</p>
 
                 </li>
-                <li class="Audio">
+                <li class="fa fa-Audio">
                     <p>Recent</p>
 
                 </li>
-                <li class="Analytics">
+                <li class="fa fa-Analytics">
                     <p>Analytics</p>
 
                 </li>
-                <li class="Wallet">
+                <li class="fa fa-Wallet">
                     <p>Wallet</p>
 
                 </li>
             </ul>
         </div>
+
+    </div>
+
 
 </body>
 
