--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
                 <li>Services</li>
                 <li>Product</li>
                 <li>
-                    <a href="#" class="signup-btn"><span>Sign Up</span></a>
+                    <a href="signup.html" class="signup-btn"><span>Sign Up</span></a>
                 </li>
             </ul>
         </div>
