--- a/main.html
+++ b/main.html
@@ -14,61 +14,29 @@
 
 <body>
     <div class="container">
-        <div class="menu">
+        <div class="burger">
+            <img src="img/outline_menu_white_18dp.png" ;alt=" "></div>
+        <div class=" menu ">
             <ul>
-                <li class="logo"><img src="img/diamond.png "></li>
-                <li class="active">Home</li>
+                <li class="logo "><img src="img/diamond.png "></li>
+                <li class="active ">Home</li>
                 <li>Services</li>
                 <li>Product</li>
                 <ul>
-                    <li>
-                        <a href="signup.html" target="_blank" class=" signup-btn "><span>Sign Up</span></a>
-                    </li>
+                    <li><a href="signup.html " target="_blank " class=" signup-btn "><span>Sign Up</span></a></li>
                 </ul>
             </ul>
         </div>
         <div class="banner ">
             <div class="app-text ">
-                <h1>Our basic thesis for bitcoin
-                    <br> is that it is better than gold</h1>
-                <p>
-                    Contrary topoular belie,Lorem ipsum is not simply a random <br>text.It has roots in a piece classical latin literature from 45Bc<br> mking it over 2000 years old
-                </p>
+                <h1>Our basic thesis for bitcoin <br>is that it is better than gold</h1>
+                <p>Contrary topoular belie, Lorem ipsum is not simply a random <br>text.It has roots in a piece classical latin literature from 45Bc<br>mking it over 2000 years old </p>
                 <div class="play-btn ">
-                    <div class="play-btn-inner ">
-                        <img src="img/play.svg "> </div>
-                </div>
-                <small><b>Learn more</b></small>
-            </div>
-            <div class="app-picture ">
-                <img src="img/back0.png ">
-            </div>
+                    <div class="play-btn-inner "><img src="img/play.svg "></div>
+                </div><small><b>Learn more</b></small></div>
+            <div class="app-picture "><img src="img/back0.png "></div>
         </div>
-        <!-- <div class="quick-links ">
-            ````````````
-            <ul>
-                <li class="fa fa-Share ">
-                    <p>Share To</p>
-
-                </li>
-                <li class="fa fa-Audio ">
-                    <p>Recent</p>
-
-                </li>
-                <li class="fa fa-Analytics ">
-                    <p>Analytics</p>
-
-                </li>
-                <li class="fa fa-Wallet ">
-                    <p>Wallet</p>
-
-                </li>
-            </ul>
-        </div> -->
-
-    </div>
-
-
+        <!-- <div class="quick-links ">```````````` <ul><li class="fa fa-Share "><p>Share To</p></li><li class="fa fa-Audio "><p>Recent</p></li><li class="fa fa-Analytics "><p>Analytics</p></li><li class="fa fa-Wallet "><p>Wallet</p></li></ul></div>--></div>
 </body>
 
 </html>
